New in v0.12.5 (??????????)
---------------------------

Fixed bug in --test-server when using --restrict security options
(test would fail improperly).  Thanks to Maik Schreiber for report.


New in v0.12.4 (2003/09/13)
---------------------------

Specified socket type as SOCK_STREAM.  (Error reported by Erik
Forsberg.)

Fixed bug backing up unreadable regular files and directories when
rdiff-backup is run by root on the source site and non-root on the
destination side.  (Reported by Troels Arvin and Arkadiusz
Miskiewicz.)

If there is data missing from the destination dir (for instance if a
user mistakenly deletes it), only warn when restoring, instead of
exiting with error.

Fixed problems with --restrict options that would cause proper
sessions to fail.  Thanks to Randall Nortman for error report.

File examples.html added to distribution; examples section removed
from man page.


New in v0.12.3 (2003/08/08)
---------------------------

Patch by Jeffrey Marshall fixes socket/fifo recognition on Mac OS X
(which apparently has buggy macros).

Patch by Jeffrey Marshall fixes --calculate-average mode, which seems
to have broken recently.

rdiff-backup should now work with python 2.3.  Thanks to Arkadiusz
Miskiewicz for bug reports.

rdiff-backup now builds with and requires librsync 0.9.6.  This
version should be much better than the old one and everyone should
probably upgrade.  Much thanks to Donovan Baarda for all the work that
went into this release.


New in v0.12.2 (2003/07/24)
---------------------------

Patch by Arkadiusz Patyk fixes building with Python 2.3c1.

Restore of archives made by 0.10.x and earlier fixed, although hard
link information is not restored unless it is current in the mirror.
(Bug reported by Jeff Lessem.)

Fixed problem with door files locally when repository is remote.
(Reported by Robert Weber.)


New in v0.12.1 (2003/07/22)
---------------------------

Added --no-change-dir-inc-perms switch, to avoid some weird errors on