@@ -4,6 +4,9 @@ New in v0.12.5 (??????????)
 Fixed bug in --test-server when using --restrict security options
 (test would fail improperly).  Thanks to Maik Schreiber for report.
 
+--list-changed-since and --list-at-time now work remotely.
+Thanks to Morten Werner Olsen for bug report.
+
 
 New in v0.12.4 (2003/09/13)
 ---------------------------
